--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 git+https://github.com/Rapptz/discord.py
-pandas
-dnspython==1.16.0
+pandas==1.2.3
+dnspython==2.1.0
 async-timeout==3.0.1
-pytz
-pymongo==3.11.2
+pytz==2021.1
+pymongo==3.11.3
 yfinance==0.1.55
