--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-git+https://github.com/Rapptz/discord.py
+discord.py==1.7.3
 PyNaCl==1.4.0
-dnspython==1.16.0
+dnspython==2.1.0
 async-timeout==3.0.1
-pytz
-pymongo==3.11.2
-yahoo-fin==0.8.8
+pytz==2021.1
 asyncpraw==7.3.1
-gTTS==2.2.2
+gTTS==2.2.3
 mutagen==1.45.1
-yfinance==0.1.62
-tradingview-ta==3.2.4
-python-dotenv==0.17.1
-matplotlib==3.4.2
+yahoo-fin==0.8.9.1
+yfinance==0.1.63
+python-dotenv==0.18.0
